# jlegroup

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: 00_jlegroup_overview.ipynb  01_EY92_basics.ipynb  02_CE97_basics.ipynb  03_EPQ03_basics.ipynb  04_shadowmap_basics.ipynb  README.md  isothermal_occultation.py  jlegroup_tutorial.ipynb
src/jlegroup/: CE97.py  EPQ03.py  EY92.py  __init__.py  physicalData.py  ray_crossing.py  shadowmap.py
src/jlegroup/data/: ne_110m_coastline.npz  ne_110m_land.npz
tests/: test_CE97_atmosphere.py  test_CE97_vacuum_clamp.py  test_EPQ03.py  test_EY92.py  test_EY92_traditional.py  test_EY92_twolimb.py  test_benchmarks.py  test_physicalData.py  test_shadowmap.py
tests/data/: README.md
tests/data/ey92-paper/: README.md  p1004_derived.csv  table3a.csv  table3b.csv
tests/data/iso-clear/: atmosphere.csv  lightcurve.csv
tests/data/shadowmap-mathematica/: G1_tracks.csv  G2_tracks.csv  G3_tracks.csv  G4_tracks.csv  README.md  directions.csv  generate_references.wls  globe_cases.csv  smdist.csv  smoffset.csv  sun_position.csv  tc_dates.csv  tc_dec.csv  tc_ra.csv
tests/data/shallow-clear/: atmosphere.csv  lightcurve.csv  parameters.csv
tests/data/steep-clear/: atmosphere.csv  lightcurve.csv
